--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,15 +30,15 @@
 			<!-- Wrapper for slides -->
 			<div class="carousel-inner">
 				<div class="item active">
-					<img src="https://i.ytimg.com/vi/xEuHOeAZkOA/maxresdefault.jpg" alt="Los Angeles" style="width: 100%;"/>
+					<img src="http://imagehost.me/img/2016/01/Cat-wallpaper2.jpg" alt="Los Angeles" style="width: 100%;"/>
 				</div>
 
 				<div class="item">
-					<img src="http://files.vforum.vn/2014/T06/img/diendanbaclieu-119428-tu-the-ngu.jpg" alt="Chicago" style="width: 100%;"/>
+					<img src="https://i.ytimg.com/vi/OxgKvRvNd5o/maxresdefault.jpg" alt="Chicago" style="width: 100%;"/>
 				</div>
 
 				<div class="item">
-					<img src="https://i.ytimg.com/vi/K5_qRnlkhGQ/maxresdefault.jpg" alt="New york" style="width: 100%;"/>
+					<img src="http://imagehost.me/img/2016/01/Cat-wallpaper5.jpg" alt="New york" style="width: 100%;"/>
 				</div>
 			</div>
 			<!-- Left and right controls -->
